--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ h6 {
     font-size: 0.67em;
 }
 
+p {
+    font-size: 0.875em;
+}
+
 h1,
 h2,
 h3,
@@ -74,14 +78,20 @@ body {
 nav {
     /* background-color: transparent; */
     background-color: #3EBFFF;
+    padding: 40px 40px 0 40px;
+}
+
+#navbar {
     display: flex;
     justify-content: space-between;
-    padding: 40px 40px 0 40px;
+    align-items: center;
 }
 
 nav ul {
     display: flex;
     list-style-type: none;
+    flex-direction: column;
+    text-align: center;
 }
 
 nav ul a {
@@ -91,7 +101,7 @@ nav ul a {
 }
 
 #contact {
-    background-color: #fff;
+    background-color: var(--lampColor);
     color: var(--textColor1);
     padding: 15px 30px;
     border-radius: 30px;
@@ -103,6 +113,67 @@ nav ul a {
 
 .hamburger {
     display: none;
+}
+
+.dropdown {
+    position: relative;
+    /* display: inline-block; */
+}
+
+
+/* .dropdown a {
+    margin-top: 0;
+    padding: 0;
+} */
+
+
+/* .dropdown a:hover {
+    margin-top: 0px;
+    padding: 0px;
+    left: -24px !important;
+    top: 0px;
+    right: 0px;
+} */
+
+.drop-btn {
+    background-color: transparent;
+    color: white;
+    /* padding: 16px; */
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.drop-content {
+    display: none;
+    position: absolute;
+    top: 20px;
+    right: 0;
+    background-color: #FFF;
+    min-width: 300px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.drop-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.drop-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:active .drop-content {
+    display: block;
+    position: absolute;
+}
+
+.dropdown:hover .drop-btn {
+    /* background-color: transparent; */
+    position: absolute;
 }
 
 
@@ -236,6 +307,10 @@ header h1 {
     color: var(--orangeColor);
 }
 
+.learn-again {
+    margin-bottom: 0;
+}
+
 
 /* Testimonial Section */
 
@@ -245,7 +320,7 @@ header h1 {
     text-align: center;
     letter-spacing: 5px;
     font-weight: 900;
-    margin-top: 150px;
+    margin-top: 120px;
     margin-bottom: 70px;
 }
 
@@ -291,7 +366,7 @@ header h1 {
 }
 
 .gallery img {
-    width: 360px;
+    width: 100%;
 }
 
 
@@ -344,33 +419,169 @@ footer img {
     fill: white;
 }
 
-@media screen and (max-width:1200px) {
+@media screen and (max-width:1000px) {
     body {
-        max-width: 1200px;
+        width: 100%;
     }
     #arrow {
         padding-top: 1em;
         padding-bottom: 14em;
     }
     .center-image {
-        max-width: 600px;
-        max-height: 500px;
-        /* height: 475px; */
+        width: 100%;
     }
     .center-text {
-        max-width: 600px;
-        margin: 0;
+        width: 720px;
+        height: 720px;
+        padding: 15% 10%;
+    }
+    #transform-text {
+        padding: 40% 10% 45% 5%;
+    }
+    #standout-text {
+        padding: 40% 5% 45% 10%;
+    }
+    .first-line,
+    .second-line,
+    .third-line {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
     }
     #img-lamp,
     #img-egg,
     #img-cherry,
     #img-orange {
-        max-width: 600px;
+        width: 100%;
+        height: 100%;
     }
     .learn-more {
-        max-width: 1200px;
+        width: 100%;
+    }
+    .text-in {
+        margin: -16em 10em 1em 10em;
+        padding: 20px 40px;
     }
     .gallery img {
-        max-width: 300px;
+        width: 100%;
+    }
+    .testimonials {
+        margin-top: 0;
+    }
+    .testimonials h3 {
+        margin: 100px auto;
+    }
+    .clients {
+        grid-template-columns: 1fr;
+    }
+    .client {
+        padding: 0 100px;
+        margin: 0 50px;
+    }
+}
+
+@media screen and (max-width:750px) {
+    #logo {
+        margin-left: 0;
+    }
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .sandwich {
+        overflow: hidden;
+        position: relative;
+        transition: max-height 650ms;
+        display: none;
+    }
+    .sandwich ul {
+        padding: 0;
+    }
+    #contact {
+        margin: 0 50px;
+    }
+    header h1 {
+        font-size: 2.5em;
+    }
+    #transform-text,
+    #standout-text {
+        padding: 6em;
+        height: unset;
+    }
+    #img-lamp,
+    #img-egg,
+    #img-cherry,
+    #img-orange {
+        object-fit: cover;
+    }
+    .text-in {
+        margin: -12em 6em 0 6em;
+        padding: 0;
+    }
+    .client {
+        margin: 0 4em;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width:500px) {
+    body {
+        min-width: 375px;
+    }
+    #arrow {
+        padding-bottom: 12em;
+    }
+    .sandwich ul li a {
+        font-size: .8em;
+        color: var(--textColor3);
+    }
+    .first-line,
+    .second-line,
+    .third-line {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 375px;
+        height: auto;
+    }
+    .center-image {
+        height: 300px;
+    }
+    .center-text {
+        height: 375px;
+        padding: 0;
+    }
+    #transform-text,
+    #standout-text {
+        padding: 10%;
+    }
+    #img-cherry,
+    #img-orange {
+        height: auto;
+    }
+    .long-image {
+        margin-bottom: 100px;
+    }
+    .text-in {
+        margin: -10em;
+        padding: 0 11em;
+    }
+    .testimonials h3 {
+        margin: 8em auto 3em;
+        padding: 0;
+    }
+    .clients {
+        display: flex;
+        flex-flow: column;
+    }
+    .client {
+        margin: 0;
+        padding: 0;
+    }
+    .gallery {
+        grid-template-columns: 1fr 1fr;
     }
 }
