--- a/style.css
+++ b/style.css
@@ -509,6 +509,9 @@ footer img {
     #arrow {
         padding-bottom: 10em;
     }
+    .learn-more {
+        display: block;
+    }
     #transform-text,
     #standout-text {
         padding: 6em;
@@ -576,9 +579,16 @@ footer img {
     .text-in {
         margin: -10em;
         padding: 0 11em;
+        /* Set to below */
+        width: 100%;
+        margin: 0;
+        padding: 0 1em;
+    }
+    .image-square {
+        margin-bottom: -10em;
     }
     .testimonials h3 {
-        margin: 8em auto 3em;
+        margin-top: 3em;
         padding: 0;
     }
     .clients {
@@ -586,7 +596,7 @@ footer img {
         flex-flow: column;
     }
     .client {
-        margin: 0;
+        margin: 0 0 -4em 0;
         padding: 0;
     }
     .gallery {
